fix: fix image resizinf on small screen sizes

--- a/style.css
+++ b/style.css
@@ -34,8 +34,9 @@ body {
 .d-flex {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
-  gap: 16px;
+  gap: 1.5em;
 }
 
 .nav-list {
@@ -51,7 +52,7 @@ body {
 .hero__content {
   flex-wrap: wrap;
   justify-content: center;
-  gap: 2em;
+  gap: 3em;
   align-items: flex-start;
   color: aliceblue;
   position: absolute;
@@ -76,7 +77,7 @@ h1 {
 
 .hero img {
   width: 100%;
-  height: 100%;
+  object-fit: cover;
 }
 .hero__content p {
   max-width: 20em;
